--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -422,7 +422,8 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #header1-1 .mbr-section-title {
-  color: #ffffff;
+  color: #000000;
+  font-size: 72px;
 }
 #header1-1 .mbr-section-title SPAN {
   color: #000000;
